[gd_scene load_steps=3 format=3 uid="uid://x8w85g8lgmgp"]

[ext_resource type="Script" path="res://Control.gd" id="1_rp33j"]

[sub_resource type="Theme" id="Theme_x8ltw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -588.0
offset_right = -132.0
offset_bottom = -588.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rp33j")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 591.0
offset_right = 512.0
offset_bottom = 732.0
theme_override_font_sizes/font_size = 50
text = "Username	
Generator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 203.0
offset_top = 721.0
offset_right = 401.0
offset_bottom = 764.0
text = "More Numbers"

[node name="MoreNumbers" type="CheckButton" parent="Button"]
layout_mode = 0
offset_left = 176.0
offset_top = -16.0
offset_right = 224.0
offset_bottom = 16.0
scale = Vector2(3, 3)

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 202.0
offset_top = 786.0
offset_right = 400.0
offset_bottom = 832.0
text = "With Symbols"

[node name="WithSymbols" type="CheckButton" parent="Button2"]
layout_mode = 0
offset_left = 176.0
offset_top = -16.0
offset_right = 224.0
offset_bottom = 16.0
scale = Vector2(3, 3)

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 852.0
offset_right = 398.0
offset_bottom = 900.0
text = "With Uppercase"

[node name="WithUppercase" type="CheckButton" parent="Button3"]
layout_mode = 0
offset_left = 176.0
offset_top = -16.0
offset_right = 224.0
offset_bottom = 16.0
scale = Vector2(3, 3)

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 202.0
offset_top = 913.0
offset_right = 400.0
offset_bottom = 958.0
text = "With Spaces"

[node name="WithSpaces" type="CheckButton" parent="Button4"]
layout_mode = 0
offset_left = 176.0
offset_top = -16.0
offset_right = 224.185
offset_bottom = 16.0
scale = Vector2(3, 3)
theme = SubResource("Theme_x8ltw")

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 1054.0
offset_right = 399.0
offset_bottom = 1099.0
text = "Must Include:"

[node name="ItemList" type="ItemList" parent="Button5"]
layout_mode = 0
offset_left = 208.0
offset_right = 304.0
offset_bottom = 64.0
pivot_offset = Vector2(21, 31)

[node name="Button7" type="Button" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 980.0
offset_right = 400.0
offset_bottom = 1027.0
text = "One Word"

[node name="OneWord" type="CheckButton" parent="Button7"]
layout_mode = 0
offset_left = 176.0
offset_top = -21.0
offset_right = 224.185
offset_bottom = 11.0
scale = Vector2(3, 3)
theme = SubResource("Theme_x8ltw")

[node name="Button6" type="Button" parent="."]
layout_mode = 0
offset_left = 202.0
offset_top = 1119.0
offset_right = 400.0
offset_bottom = 1183.0
text = "Generate Username"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="toggled" from="Button/MoreNumbers" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="Button2/WithSymbols" to="." method="_on_with_symbols_toggled"]
[connection signal="item_selected" from="Button5/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
